# Image-Processing

./: .gitconfig  README.md  main.c  projet.c
pngtest/: CMakeLists.txt  pngwrap.c
src/: cplx2int.c  cplx2intn.c  cplx2intv2.c  cplxtoint.c  fft.c  gg.h  int2cplx.c  main.c  pngwrap.c  produitversion1.c  produitversion2.c  produitversion3.c  produitversionfinal.c  projet.h
test/: testprojet.c
